--- a/main/assets/css/style.css
+++ b/main/assets/css/style.css
@@ -1336,8 +1336,8 @@ section {
   color: #663300;
 } 
 
-.hanging {
+.margin {
   text-indent: -20px;
-}.hanging:not(:first-line) {
+}.margin:not(:first-line) {
   margin-left: 20px;
 }
