tinkering with margin

--- a/main/assets/css/style.css
+++ b/main/assets/css/style.css
@@ -1337,7 +1337,8 @@ section {
 } 
 
 .margin {
-  text-indent: -20px;
-}.margin:not(:first-line) {
+  margin-left: 0px;
+}
+.margin:not(:first-line) {
   margin-left: 20px;
 }
