--- a/main/templates/item_page.html
+++ b/main/templates/item_page.html
@@ -224,7 +224,7 @@
                 <span class="expand">Imprint Location: </span><span id="stationer_imprint_location">{{ data.stationer_imprint_location|safe }}</span><br>
                 {% endif %}
                 {% if data.stationer_entries_in_register != "None" %}
-                <span class='expand'>Entries in Stationers' Register: </span><span id='stationer_entries_in_register'>{{ data.stationer_entries_in_register|safe }}</span><br>
+                <div class='hanging'><span class='expand'>Entries in Stationers' Register: </span><span id='stationer_entries_in_register'>{{ data.stationer_entries_in_register|safe }}</span></div><br>
                 {% endif %}
                 {% if data.stationer_additional_notes %}
                 <span class="expand"></span>
