--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -73,7 +73,7 @@
       <!-- View Selector  -->
       <div class="form-check form-check-inline">
         <input class="form-check-input" type="radio" name="inlineRadioOptions" id="titleRadio" value="title">
-        <label class="form-check-label text-light" for="titleRadio">Title</label>
+        <label class="form-check-label text-light" for="titleRadio">Work</label>
       </div>
       <div class="form-check form-check-inline">
         <input class="form-check-input" type="radio" name="inlineRadioOptions" id="editionRadio" value="edition" checked>
