--- a/main/templates/item_page.html
+++ b/main/templates/item_page.html
@@ -6,7 +6,7 @@
 </section>
 
 <script type="module">
-import {expand} from './assets/js/deep.js';
+import {expand} from '../assets/js/deep.js';
 // fetch data for all records, item_data is an object that serves as a lookup ex. item_data[330]
 let item_data;
 let item_array;
