changing item page

--- a/main/templates/item_page.html
+++ b/main/templates/item_page.html
@@ -5,6 +5,7 @@
     <div id="item" style="min-height: 600px; margin-top:50px" class="container" ></div>
 </section>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/list.js/2.3.1/list.min.js"></script>  
 <script type="module">
 import {expand} from '../assets/js/deep.js';
 // fetch data for all records, item_data is an object that serves as a lookup ex. item_data[330]
