changing item page

--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -135,5 +135,18 @@
     document.getElementById("Collections").addEventListener("change", search);
     document.getElementById("PlaysinCollections").addEventListener("change", search);
   </script>
+  <script>
+    //on page load 
+    document.addEventListener("DOMContentLoaded", function(event) {
+      let deep_id = window.location.href.split('/')[3];
+      // if deep_id is not empty and is a number
+      if (deep_id && !isNaN(deep_id)) {
+        // search for deep_id
+        search(deep_id);
+      } else {
+        // search for all
+        search();
+      }
+    });
  
   {% endblock %}
