--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -127,8 +127,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/list.js/2.3.1/list.min.js"></script>  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/wnumb/1.2.0/wNumb.min.js"></script>  
-  <script src="assets/js/choices.min.js"></script>   
-  <script src="assets/js/deep.js"></script>   
+  <script src="/assets/js/choices.min.js"></script>   
+  <script src="/assets/js/deep.js"></script>   
   
   <script>
     document.getElementById("singlePlay").addEventListener("change", search);
