changing item page

--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block extra_css %}
-<link href="assets/css/choices.min.css" rel="stylesheet">
+<link href="/assets/css/choices.min.css" rel="stylesheet">
 <!-- all the JS goes here when ready <script src="assets/js/scripts.js" defer></script> -->
 
 {% endblock %}
