--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -137,7 +137,10 @@
   </script>
   <script>
       let get_deep_id = window.location.href.split('/')[3];
-      console.log(get_deep_id);
+      if (get_deep_id) {
+        document.getElementById('advancedSearchField-1').value = get_deep_id
+        search();
+      }
   </script>  
     
  
