--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -141,12 +141,14 @@
         // select deep-id
         let filterBlock = document.getElementById("filterBlock-1");
         searchSelect = filterBlock.children[1].children[0]
-        searchSelect.value = 'deep-id' 
+        // set searchSelect to deep id
+        searchSelect.value = 'deep-id';
+        update_searchSelect(searchSelect);
 
         let searchField = document.getElementById(searchSelect.id.replace('searchSelect','advancedSearchField'));
         searchField.value = get_deep_id;
         // trigger keyup event
-        searchField.dispatchEvent(new Event('keyup'));
+        search();
       }
   </script>  
     
