--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -149,6 +149,8 @@
         searchField.value = get_deep_id;
            
       }
+      // after page loaded run search 
+      document.addEventListener("DOMContentLoaded", search);
   </script>  
     
  
