changing item page

--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -149,8 +149,9 @@
         searchField.value = get_deep_id;
            
       }
-      // after page loaded run search 
-      document.addEventListener("DOMContentLoaded", search);
+      // click on editionRadio
+      document.getElementById('editionRadio').click();
+      
   </script>  
     
  
