--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -147,14 +147,11 @@
 
         let searchField = document.getElementById(searchSelect.id.replace('searchSelect','advancedSearchField'));
         searchField.value = get_deep_id;
-           
+        // press enter 
+        searchField.dispatchEvent(new KeyboardEvent('keydown',{'key':'Enter'}));
       }
       
   </script>  
-<script>
-  // once page is fully loaded, run this function
-  document.addEventListener("DOMContentLoaded", function(event) {
-    search();
-  });
+
  
   {% endblock %}
