--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -137,6 +137,9 @@
   </script>
   <script>
       let get_deep_id = window.location.href.split('/')[3];
+      console.log(typeof(get_deep_id));
+      console.log(get_deep_id);
+      
       if (get_deep_id) {
         // select deep-id
         let filterBlock = document.getElementById("filterBlock-1");
