changing item page

--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -165,6 +165,8 @@
         searchField.value = get_deep_id;
         // press enter 
         searchField.dispatchEvent(new KeyboardEvent('keyup',{'key':'Enter'}));
+        // select expandAllButton
+        document.getElementById('expandAllButton').click();
       }
               }
             )
