--- a/main/assets/css/style.css
+++ b/main/assets/css/style.css
@@ -629,7 +629,7 @@ section {
 }
 .services .title {
   margin-left: 40px;
-  /* font-weight: 700; */
+  font-weight: 700;
   margin-bottom: 15px;
   font-size: 18px;
 }
