--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -8,7 +8,7 @@
 {% block content %}
 
 <!-- ======= Search Section ======= -->
-<section id="search" class="services section-bg" onload="search();">
+<section id="search" class="services section-bg">
   <div style="margin-top:80px; min-height: 600px;" class="container" >
     <div id="users">
 
@@ -130,11 +130,7 @@
   <script src="/assets/js/choices.min.js"></script>   
   <script src="/assets/js/deep.js"></script>   
   
-  <script>
-    document.getElementById("singlePlay").addEventListener("change", search);
-    document.getElementById("Collections").addEventListener("change", search);
-    document.getElementById("PlaysinCollections").addEventListener("change", search);
-  </script>
+
   <script>
 
     let init_item_data;
