--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -72,11 +72,11 @@
     
       <!-- View Selector  -->
       <div class="form-check form-check-inline">
-        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="titleRadio" value="title">
+        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="titleRadio" value="title" checked>
         <label class="form-check-label text-light" for="titleRadio">Work</label>
       </div>
       <div class="form-check form-check-inline">
-        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="editionRadio" value="edition" checked>
+        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="editionRadio" value="edition">
         <label class="form-check-label text-light" for="editionRadio">Edition</label>
       </div>
       <div class="form-check form-check-inline">
@@ -165,7 +165,9 @@
       }
               }
             )
-      
+    
+    // click editionRadio to load results (because I forget how I hid results on load)
+    document.getElementById('editionRadio').click() 
       
   </script>  
 
